# rust_hawk_project

./: .gitignore  Cargo.toml  README.md  README_CN.md
config/: my_config.yml
docs/: README.md
hawk_api/: Cargo.toml
hawk_api/config/: test.yml
hawk_api/src/: lib.rs
hawk_api/src/config_center/: mod.rs  service_config.rs  services_config.rs
hawk_api/src/model/: client.rs  config.rs  log.rs  mod.rs  mysql.rs  postgres.rs  redis.rs  server.rs
hawk_api/src/traits/: mod.rs
hawk_api/src/utils/: file_utils.rs  yml_utils.rs
hawk_cache/: Cargo.toml  README_CN.md
hawk_cache/src/: lib.rs
hawk_cache/src/utils/: mod.rs  yml_utils.rs
hawk_chart_center/: Cargo.toml
hawk_chart_center/src/: main.rs
hawk_client/: Cargo.toml  README.md
hawk_client/src/: lib.rs  main.rs
hawk_client/src/client/http/: thread.rs
hawk_client/src/client/unix_socket/: mod.rs  thread.rs
hawk_client/src/config/: config_center.rs  log_config.rs  mod.rs
hawk_client/src/server/: mod.rs
hawk_client/src/server/http/: thread.rs
hawk_client/src/uds/: client.rs  mod.rs  uri.rs
hawk_client/src/utils/: mod.rs
hawk_client/tests/: http.rs  uds.rs
hawk_config/: Cargo.toml  README.md  README_CN.md
hawk_config/config/: my_config.yml  my_server.yml  my_servers.yml
hawk_config/src/: lib.rs  log_config.rs  read_config.rs
hawk_config/src/utils/: yml_utils.rs
hawk_config_center/: Cargo.toml  README_CN.md
hawk_config_center/src/: main.rs
hawk_config_center/src/register/http/: mod.rs  thread.rs
hawk_config_center/src/server/unix_socket/: thread.rs
hawk_data/: Cargo.toml  README_CN.md
hawk_data/config/: my.yml
hawk_data/src/: lib.rs
hawk_data/src/db/: mod.rs  postgres.rs  redis.rs
hawk_data/src/pool/: mod.rs  postgres.rs
hawk_data/src/utils/: os_utils.rs
hawk_data/tests/: redis.rs
hawk_function_macros/: Cargo.toml
hawk_function_macros/src/: lib.rs
hawk_function_macros/tests/: t.rs
hawk_log_center/: Cargo.toml  README_CN.md
hawk_log_center/src/utils/: yml_utils.rs
hawk_macros/: Cargo.toml  README.md
hawk_macros/src/: lib.rs
hawk_macros/tests/: t.rs
hawk_proxy/: Cargo.toml  README_CN.md
hawk_proxy/src/: main.rs
hawk_proxy/src/http/: thread.rs
hawk_proxy/src/server/: http.rs  mod.rs  static_file.rs
hawk_proxy/src/unix_socket/: thread.rs
hawk_queue/: Cargo.toml  README_CN.md
hawk_queue/src/utils/: yml_utils.rs
hawk_server/: Cargo.toml  README.md
hawk_server/src/: main.rs
hawk_server/src/config/: log_config.rs  mod.rs
hawk_server/src/server/: mod.rs
hawk_server/src/server/http/: thread.rs
hawk_server/src/server/unix_socket/: mod.rs  thread.rs
hawk_server/src/utils/: file_utils.rs  mod.rs
hawk_tools/: Cargo.toml
hawk_tools/src/: lib.rs
hawk_tools/src/algorithm/: random.rs
hawk_tools/src/utils/: file_utils.rs  json_utils.rs  mod.rs  os_utils.rs  redis_utils.rs  uuid_utils.rs  yml_utils.rs
