[package]
name = "hawk_client"
version = "0.1.0"
authors = ["IThawk <lianwei1994@163.com>"]
edition = "2018"
include = ["Cargo.toml", "LICENSE", "README.md"]
description = "server client project bash on actix_web"
readme = "README.md"
repository = "..........."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
actix-service = "1.0.0"
bytes = "0.5.2"
futures = "0.3.1"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-redis = "0.8.0"
redis-async = "0.6.1"
log = "0.4.8"
log4rs = "0.12.0"
structopt = { version = "0.3", default-features = false }
serde_yaml ={version = "0.8.4"}
hawk_config = {version = "0.1.0" ,path = "../hawk_config"}
hawk_api = {version = "0.1.0" ,path = "../hawk_api"}
hawk_tools = {version = "0.1.0" ,path = "../hawk_tools"}
hyper ="0.13"
tokio  = { version = "0.2", features = ["full"] }
